--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,9 +5,9 @@
         <th nzWidth="25%">FriendName</th>
         <th nzWidth="15%">FriendAge</th>
         
-        <th nzWidth="15%">Birthday dte</th>
-        <th nzWidth="40%">Mobile phone </th>
-        <th nzWidth="40%">Wishes ist </th>
+        <th nzWidth="15%">Birthday date</th>
+        <th nzWidth="15%">Mobile phone </th>
+        <th nzWidth="15%">Wishes ist </th>
         <th>Action</th>
       </tr>
     </thead>
@@ -15,16 +15,18 @@
       <tr *ngFor="let data of editRowTable.data">
         <ng-container *ngIf="!editCache[data.id].edit; else editTemplate">
           <td>{{ data.friendName}}</td>
-          <td>{{ data.birthDayDate}}</td>
+          <td>{{ data.age}}</td>
           <td>{{ data.birthDayDate }}</td>
           
-          <td>{{ data.wishes }}</td>
+          <td>{{ data.phoneNumber }}</td>
           <td>{{ data.wishes }}</td>
           <td><a (click)="startEdit(data.id)">Edit</a></td>
         </ng-container>
         <ng-template #editTemplate>
           <td><input type="text" nz-input [(ngModel)]="editCache[data.id].data.friendName" /></td>
+          <td><input type="text" nz-input [(ngModel)]="editCache[data.id].data.age" /></td>
           <td><input type="text" nz-input [(ngModel)]="editCache[data.id].data.birthDayDate" /></td>
+          <td><input type="text" nz-input [(ngModel)]="editCache[data.id].data.phoneNumber" /></td>
           <td><input type="text" nz-input [(ngModel)]="editCache[data.id].data.wishes" /></td>
           <td>
             <a (click)="saveEdit(data.id)" class="save">Save</a>
