--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -30,13 +30,13 @@
           <td><input type="text" nz-input [(ngModel)]="editCache[data.id].data.wishes" /></td>
           <td>
             <a (click)="saveEdit(data.id)" class="save">Save</a>
-            <a nz-popconfirm nzPopconfirmTitle="Sure to cancel?" (nzOnConfirm)="cancelEdit(data.id)">Cancel</a>
+            <a nz-popconfirm nzPopconfirmTitle="Sure to cancel?" (nzOnConfirm)="cancelEdit(data.id)">     Cancel</a>
           </td>
         </ng-template>
       </tr>
     </tbody>
   </nz-table>
-<button nz-button nzType="primary">
+<button nz-button nzType="primary" [routerLink]="['/add', userId]">
     <span nz-icon nzType="add"></span>
    Add
   </button>
